Quiz-App/quiz-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz-app
  labels:
    app: quiz-app
spec:
  containers:
    - name: quiz-app
      image: ukohae39/quiz-app
      ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: quiz-app-service
spec:
  selector:
    app: quiz-app
  ports:
    - name: http
      port: 3000
      nodePort: 30081
  type: NodePort
