Quiz-App/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-app-deployment
  labels:
    app: quiz-app
spec:
  replicas: 2  # Set the desired number of replicas as needed
  selector:
    matchLabels:
      app: quiz-app
  template:
    metadata:
      labels:
        app: quiz-app
    spec:
      containers:
      - name: quiz-app
        image: ukohae39/quiz-app:latest  # Update with the correct image URL
        ports:
        - containerPort: 3000  # Update with the correct port
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-app-service
  labels:
    app: quiz-app
spec:
  selector:
    app: quiz-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Update with the correct target port
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-app-ingress
  labels:
    app: quiz-app
spec:
  rules:
    - host: quiz-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-app-service
                port:
                  number: 80
